align fixed

--- a/pillars-app/src/Css/Card.css
+++ b/pillars-app/src/Css/Card.css
@@ -78,6 +78,7 @@
     position: relative;
     color: #171717;
     margin-top: 4em;
+    font-size: 15px;
   }
   .header img {
     height: auto;
