--- a/pillars-app/src/Css/Home.css
+++ b/pillars-app/src/Css/Home.css
@@ -64,16 +64,20 @@ p {
 }
 
 @media (max-width: 768px) {
+  .image-container {
+    height: auto;
+  }
   .overlay {
+    margin-top: 3em;
     font-size: 1rem;
   }
 
-  h1 {
+  .overlay h1 {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
   }
   p {
-    font-size: 0.8rem;
+    font-size: 15px;
     line-height: 1.2;
   }
 }
@@ -193,6 +197,9 @@ p {
 }
 
 @media (max-width: 768px) {
+  .btn {
+    margin-top: 5em;
+  }
   .btn button {
     margin: 2rem;
     padding: 6px 15px;
